main, efi: Add a stubbed out EFI environment
Load the binary from the standared EFI location and execute in an EFI
environment with all the functions currently stubbed out.

Signed-off-by: Rob Bradford <robert.bradford@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ panic = "abort" # disable stack unwinding on panic
 [dependencies]
 cpuio = "*"
 spin = "0.4.9"
+r-efi = "1.0.0"
 
 [dependencies.lazy_static]
 version = "1.0"
