main: Make the block device a mutable static
This will allow allow more straightforward access from other components,
in particular the EFI code.

Signed-off-by: Rob Bradford <robert.bradford@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ panic = "abort" # disable stack unwinding on panic
 
 [dependencies]
 cpuio = "*"
+spin = "0.4.9"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
+
