misc: Update binary name from "kvm-fw" to "hypervisor-fw"
Signed-off-by: Rob Bradford <robert.bradford@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kvm-fw"
+name = "hypervisor-fw"
 version = "0.1.0"
 authors = ["Rob Bradford <robert.bradford@intel.com>"]
 edition = "2018"
