ci: Run xclippy aginst the custom target
Also, explain why we still need
  panic = "abort"
in the Cargo.toml

Signed-off-by: Joe Richey <joerichey@google.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
 
 script:
   - cargo xbuild --release --target target.json
-  - cargo xclippy
+  - cargo xclippy --target target.json
   - cargo clippy --all-targets --all-features
   - cargo fmt --all -- --check
   - cargo test
