Use x86_64 and AtomicRefCell creates
- The `spin` crate is unmaintained
  - Replace it with `atomic_refcell`
  - We don't need spin locks, just a checked refcount
- Use `x86_64` instead of `cpuio`
  - It has better abstractions
  - It has more functionality that we can user later
- Fixup existing port usage

Signed-off-by: Joe Richey <joerichey@google.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ log-serial = []
 log-panic = ["log-serial"]
 
 [dependencies]
-cpuio = "*"
-spin = "0.5"
+x86_64 = "0.9"
+atomic_refcell = "0.1"
 r-efi = "2.1.0"
 
