gdt: Move GDT and GDT Definitions to Rust
The GDT is just some data in static memory, so there's not a good
reason to have this code in assembly. Ideally, we would use types
from the x86_64 crate for this. However,

  - We can't use x86_64::structures::gdt::DescriptorFlags for the
    contents of the descriptors, as that definition is missing flags.
  - We can't use x86_64::structures::DescriptorTablePointer for the
    GDT pointers because its base is a u64, and Rust doesn't allow
    "pointer-to-integer cast" in statics.

So we have to roll our own. The definitions aren't that bad. The only
downside is that we have to add the bitflags dependency, but it was
already a dependancy of x86_64, so that's also not bad.

Signed-off-by: Joe Richey <joerichey@google.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ log-serial = []
 log-panic = ["log-serial"]
 
 [dependencies]
+bitflags = "1.2"
 x86_64 = "0.9"
 atomic_refcell = "0.1"
 r-efi = "2.1.0"
