efi: Add GlobalAlloc for heap allocation support
Rust requires GlobalAlloc implementation to use heap allocated standard
library features. This firmware already has a dedicated page allocator
for EFI, but not implemented to satisfy GlobalAlloc trait bounds. This
commit introduces GlobalAlloc using linked_list_allocator crate. The
page allocator allocates 256 MiB for the heap allocator during the
initialization.

Signed-off-by: Akira Moroo <retrage01@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ install:
   - ./make-test-disks.sh
 
 script:
-  - cargo build --target target.json -Zbuild-std=core -Zbuild-std-features=compiler-builtins-mem
-  - cargo build --release --target target.json -Zbuild-std=core -Zbuild-std-features=compiler-builtins-mem
-  - cargo clippy --target target.json -Zbuild-std=core
+  - cargo build --target target.json -Zbuild-std=core,alloc -Zbuild-std-features=compiler-builtins-mem
+  - cargo build --release --target target.json -Zbuild-std=core,alloc -Zbuild-std-features=compiler-builtins-mem
+  - cargo clippy --target target.json -Zbuild-std=core,alloc
   - cargo clippy --all-targets --all-features
   - cargo fmt --all -- --check
   - cargo test
