--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ uart_16550 = "0.2.15"
 linked_list_allocator = "0.9.1"
 
 [dev-dependencies]
+dirs = "4.0.0"
 rand = "0.8.4"
 ssh2 = "0.9.1"
 tempfile = "3.2.0"
