--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,24 +9,13 @@ jobs:
     if: github.event_name == 'pull_request'
     name: Build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        rust:
-          - nightly-2022-06-10
-        target:
-          - x86_64-unknown-linux-gnu
     steps:
       - name: Code checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Install Rust toolchain (${{ matrix.rust }})
+      - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust }}
-          target: ${{ matrix.target }}
-          override: true
       - name: Install rust-src
         run: rustup component add rust-src
       - name: Install clippy
