--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -3,9 +3,13 @@ name: Rust-Hypervisor-Firmware's Docker image update
 on:
   push:
     branches: main
-    paths: resources/Dockerfile
+    paths:
+      - resources/Dockerfile
+      - rust-toolchain.toml
   pull_request:
-    paths: resources/Dockerfile
+    paths:
+      - resources/Dockerfile
+      - rust-toolchain.toml
 
 jobs:
   main:
@@ -14,28 +18,25 @@ jobs:
       - name: Code checkout
         uses: actions/checkout@v2
 
+      - name: Get active Rust toolchain
+        id: get-toolchain
+        run: echo "toolchain=`rustup show active-toolchain | cut -d ' ' -f1`" >> $GITHUB_ENV
+
       - name: Login to DockerHub
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.repository == 'cloud-hypervisor/rust-hypervisor-firmware' && github.event_name == 'push' }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        if: ${{ github.event_name == 'push' }}
+      - name: Build
         uses: docker/build-push-action@v2
         with:
           file: ./resources/Dockerfile
+          build-args: |
+            RUST_TOOLCHAIN=${{ env.toolchain }}
           platforms: linux/amd64
-          push: true
-          tags: rusthypervisorfirmware/dev:latest
-
-      - name: Build only
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: docker/build-push-action@v2
-        with:
-          file: ./resources/Dockerfile
-          platforms: linux/amd64
+          push: ${{ github.repository == 'cloud-hypervisor/rust-hypervisor-firmware' && github.event_name == 'push' }}
           tags: rusthypervisorfirmware/dev:latest
 
       - name: Image digest
