build: Switch to dtolnay/rust-toolchain action
Since actions-rs/toolchain is no longer maintained, we need to switch to
dtolnay/rust-toolchain, which is actively maintained.

Signed-off-by: Akira Moroo <retrage01@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
       - name: Install rust-src
         run: rustup component add rust-src
       - name: Install clippy
