--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,11 +23,11 @@ jobs:
       - name: Install rustfmt
         run: rustup component add rustfmt
       - name: Build (debug)
-        run: cargo build --target target.json -Zbuild-std=core,alloc -Zbuild-std-features=compiler-builtins-mem
+        run: cargo build --target x86_64-unknown-none.json -Zbuild-std=core,alloc -Zbuild-std-features=compiler-builtins-mem
       - name: Build (release)
-        run: cargo build --release --target target.json -Zbuild-std=core,alloc -Zbuild-std-features=compiler-builtins-mem
+        run: cargo build --release --target x86_64-unknown-none.json -Zbuild-std=core,alloc -Zbuild-std-features=compiler-builtins-mem
       - name: Clippy (default)
-        run: cargo clippy --target target.json -Zbuild-std=core,alloc
+        run: cargo clippy --target x86_64-unknown-none.json -Zbuild-std=core,alloc
       - name: Clippy (all targets, all features)
         run: cargo clippy --all-targets --all-features
       - name: Formatting
