--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.4.1"
 authors = ["The Rust Hypervisor Firmware Authors"]
 edition = "2021"
 
-# Despite "panic-strategy": "abort" being set in target.json, panic = "abort" is
+# Despite "panic-strategy": "abort" being set in x86_64-unknown-none.json, panic = "abort" is
 # needed here to make "cargo check" and "cargo clippy" run without errors.
 [profile.dev]
 panic = "abort"
