--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ efi-var = []
 [dependencies]
 bitflags = "1.3.2"
 atomic_refcell = "0.1.8"
-r-efi = "4.1.0"
+r-efi = { version = "4.1.0", features = ["efiapi"] }
 linked_list_allocator = "0.10.4"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
