--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ linked_list_allocator = "0.10.4"
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 tock-registers = "0.8.1"
-cortex-a = "8.1.1"
+aarch64-cpu = "9.3.1"
 fdt = "0.1.4"
 chrono = { version = "0.4", default-features = false }
 
