build: Stick to ubuntu-20.04 GitHub Actions image
Recently `ubuntu-latest` has moved to `ubuntu-22.04` from
`ubuntu-20.04`. This breaks our CI due to failures of dependency builds.
We need to use `ubuntu-20.04` until all the dependencies updated.

Signed-off-by: Akira Moroo <retrage01@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ jobs:
   release:
     if: github.event_name == 'create' && github.event.ref_type == 'tag'
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Code checkout
         uses: actions/checkout@v2
