build: Build ssh2 with `vendored-openssl` feature
The `vendored-openssl` feature builds static OpenSSL. This is required
because Ubuntu 22.04 uses OpenSSL 3, which is not compatible with ssh2.

Signed-off-by: Akira Moroo <retrage01@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,5 +44,5 @@ x86_64 = "0.14.10"
 [dev-dependencies]
 dirs = "4.0.0"
 rand = "0.8.5"
-ssh2 = "0.9.4"
+ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
 tempfile = "3.3.0"
