--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,9 @@ chrono = { version = "0.4", default-features = false }
 uart_16550 = "0.2.18"
 x86_64 = "0.14.10"
 
+[target.'cfg(target_arch = "riscv64")'.dependencies]
+chrono = { version = "0.4", default-features = false }
+
 [dev-dependencies]
 dirs = "5.0.0"
 rand = "0.8.5"
