misc: riscv: Add support for starting on QEMU virt machine
Add linker and compilation scripts that produce a binary that can be
used with QEMU's RV64 virt machine type with the produced ELF binary
loaded by OpenSBI.

Signed-off-by: Rob Bradford <rbradford@rivosinc.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ x86_64 = "0.14.10"
 
 [target.'cfg(target_arch = "riscv64")'.dependencies]
 chrono = { version = "0.4", default-features = false }
+fdt = "0.1.5"
 
 [dev-dependencies]
 dirs = "5.0.0"
