--- a/riscv64gcv-unknown-none-elf.json
+++ b/riscv64gcv-unknown-none-elf.json
@@ -5,7 +5,7 @@
   "data-layout": "e-m:e-p:64:64-i64:64-i128:128-n64-S128",
   "eh-frame-header": false,
   "emit-debug-gdb-scripts": false,
-  "features": "+m,+a,+f,+d,+c,+v",
+  "features": "+m,+a,-f,+d,+c,-v",
   "is-builtin": false,
   "linker": "rust-lld",
   "linker-flavor": "ld.lld",
