build: Enable CI jobs to run on merge_group
In preparation for enabling a merge queue trigger the jobs on
merge_group event.

Also drop running these actions on "create" event as that is
unnecessary.

Signed-off-by: Rob Bradford <rbradford@rivosinc.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,11 @@
 name: Rust Hypervisor Firmware Build
-on: [pull_request, create]
+on: [pull_request, merge_group]
 
 env:
   RUSTFLAGS: "-D warnings"
 
 jobs:
   build:
-    if: github.event_name == 'pull_request'
     name: Build
     runs-on: ubuntu-22.04
     strategy:
