--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ efi-var = []
 bitflags = "2.5.0"
 atomic_refcell = "0.1.13"
 r-efi = { version = "4.4.0", features = ["efiapi"] }
-linked_list_allocator = "0.10.4"
+heapless = "0.8.0"
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 tock-registers = "0.9.0"
