--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ bitflags = "2.6.0"
 atomic_refcell = "0.1.13"
 r-efi = { version = "4.5.0", features = ["efiapi"] }
 heapless = "0.8.0"
+log = "0.4.22"
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 tock-registers = "0.9.0"
