--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,9 @@ chrono = { version = "0.4", default-features = false }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 uart_16550 = "0.3.2"
-x86_64 = "0.15.1"
+x86_64 = { version = "0.15.1", default-features = false, features = [
+    "instructions",
+] }
 
 [target.'cfg(target_arch = "riscv64")'.dependencies]
 chrono = { version = "0.4", default-features = false }
