--- a/aarch64-unknown-none.json
+++ b/aarch64-unknown-none.json
@@ -2,11 +2,11 @@
   "llvm-target": "aarch64-unknown-none",
   "abi": "softfloat",
   "arch": "aarch64",
-  "data-layout": "e-m:e-i8:8:32-i16:16:32-i64:64-i128:128-n32:64-S128",
+  "data-layout": "e-m:e-p270:32:32-p271:32:32-p272:64:64-i8:8:32-i16:16:32-i64:64-i128:128-n32:64-S128-Fn32",
   "disable-redzone": true,
   "features": "+strict-align,-neon,-fp-armv8",
   "linker": "rust-lld",
-  "linker-flavor": "ld.lld",
+  "linker-flavor": "gnu-lld",
   "os": "none",
   "executables": true,
   "max-atomic-width": 128,
@@ -15,6 +15,9 @@
   "relocation-model": "pic",
   "target-pointer-width": "64",
   "pre-link-args": {
-    "ld.lld": ["--script=aarch64-unknown-none.ld", "--oformat=binary"]
+    "gnu-lld": [
+      "--script=aarch64-unknown-none.ld",
+      "--oformat=binary"
+    ]
   }
 }
